fixed navigation bar not being centered on smaller screens

--- a/app/components/navbar.module.css
+++ b/app/components/navbar.module.css
@@ -12,10 +12,9 @@
   position: fixed;
   top: 0;
   width: 100%;
-  margin: 1rem auto;
   z-index: 1030;
   left: 0;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .mainNav {
@@ -24,7 +23,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
-  min-width: 500px;
+  /* min-width: 500px; */
   /* border-radius: 10px; */
   padding: 1.2rem 0 1.2rem 0;
   margin: 0;
